Time: 26 ms (92.48%) | Memory: 51.8 MB (45.71%) - LeetSync